# Video-Recoding-Script

./: README.md  Shrink-Videos.sh  shrink-videos.cabal
app/: Main.hs
doc/: CHANGELOG.md
src/ShrinkVideos/: App.hs  Cli.hs  Domain.hs  Logging.hs
src/ShrinkVideos/Type/: EncodingOutcome.hs  FileSize.hs  VideoFile.hs  VideoFormat.hs
